Changed script to run from node rather than nodemon on package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Assignment to demonstrate understanding in express-session and connection to MongoDB",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
